re PR target/24071 (__gthread_active_p vs __gthread_once)

PR target/24071
	* gthr-posix.h (__gthread_active_p): New implementation on Solaris.
	* gthr-posix95.h (__gthread_active_p): Likewise.

From-SVN: r118262